--- a/frontend/src/components/product/ProductComponent.css
+++ b/frontend/src/components/product/ProductComponent.css
@@ -5,10 +5,10 @@
     align-items: center;
     width: 100%;
     margin-top: 10px;
-
 } 
 
 .card{
+    width: 30vw;
     transition: all 0.2s ease !important;
 }
 
