--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -5,6 +5,7 @@
     margin: 0;
     box-sizing: border-box;  
     font-family: "Fraunces", serif;
+    user-select: none; 
 }
 
 .main-title,
@@ -17,6 +18,7 @@
     color: #3f2f06;
     font-size: 3rem;
     padding: 40px 0px 7px 0px;
+    margin-top: 50px;
 }
 
 .sec-title{
@@ -25,13 +27,6 @@
     padding: 20px 0px;
 }
 
-.grid-cards{
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    justify-content: center;
-    align-items: center;
-    gap: 1.2rem;
-}
 
 .Loader {
     display: flex;
@@ -59,15 +54,10 @@
 
 
 @media screen and (max-width:1400px) {
-    .grid-cards{
-        grid-template-columns: repeat(3, auto);
-    }
+
 }
 
 @media screen and (max-width:1000px) {
-    .grid-cards{
-        grid-template-columns: repeat(2, auto);
-    }
     .main-title{
         font-size: 2.5rem ;
         padding: 30px 0px 5px 0px;
@@ -79,9 +69,7 @@
 }
 
 @media screen and (max-width:700px) {
-    .grid-cards{
-        grid-template-columns: repeat(1, auto);
-    } 
+
 }
 
 @media screen and (max-width:500px) {
