--- a/frontend/src/css/ScrollBar.css
+++ b/frontend/src/css/ScrollBar.css
@@ -8,17 +8,17 @@
   background-color: #d6dee1;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 208, 139, 0.89);
+  background-color: #abcfcb;
   border-radius: 20px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 208, 139, 0.89);
+  background-color: #abcfcb;
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(221, 161, 71, 0.932);
+  background-color: #8ec0b9;
 }
 ::-webkit-scrollbar-corner {
   display: none;
