--- a/frontend/src/pages/Product.css
+++ b/frontend/src/pages/Product.css
@@ -75,7 +75,7 @@
 
 .btn:hover {
     cursor: pointer;
-   background-color: antiquewhite;
+   background-color: #abd3cdd7;
    transform: scale(1.01);
 }
 
