--- a/frontend/src/components/snackbar/Snackbar.css
+++ b/frontend/src/components/snackbar/Snackbar.css
@@ -1,8 +1,8 @@
 #snackbar {
     min-width: 250px;
     margin-left: -125px;
-    background-color: #020202;
-    color: #ffdb73;
+    background-color: #99c8c2e3;
+    color: #3b3b3b;
     text-align: center;
     border-radius: 30px;
     padding: 16px;
@@ -11,7 +11,8 @@
     left: 50%;
     bottom: 30px;
     font-size: 17px;
-    box-shadow: 0px 0px 5px 1px #ffdb73; 
+    box-shadow: 0px 0px 5px 1px #848484c4;
+    ; 
 }
 
 #snackbar.show {
