--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -20,6 +20,12 @@
     margin-top: 70px;
 }
 
+.homePage-title{
+    color: #3f2f06;
+    font-size: 3rem;
+    padding: 40px 0px 7px 0px;
+}
+
 .sec-title{
     color: #b38a22;
     font-size: 1.6rem;
