--- a/frontend/src/pages/product/Product.css
+++ b/frontend/src/pages/product/Product.css
@@ -22,6 +22,7 @@
 }
 
 .img-container{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,9 +30,25 @@
     height: 100%;
     /* background-color: #eb5d5d; */
 }
+
+.icon{
+position: absolute;
+padding: 5px;
+top:5%;
+left: 5%;
+cursor: pointer;
+transition: transform 0.3s ease;
+}
+
+.icon:hover {
+    transform: rotate(-40deg); /* Rotate the icon by 40 degrees on hover */
+    color: rgb(116, 113, 113); /* Change the color to white on hover */
+}
+
 .img{
     width: 95%;
     height: 95%;
+    border-radius: 15px;
 }
 
 .btnsPrice-wrapper{
@@ -41,6 +58,7 @@
     align-items: center;
     width:49vw;
     height: 100%;
+    font-weight: bold;
     /* background-color: #67d3fd; */
 }
 
@@ -89,4 +107,16 @@
     padding: 20px;
     gap: 20px;
     /* background-color: rgba(203, 252, 253, 0.815); */
+}
+
+@media screen and (max-width:800px) {
+    .first-wrapper{
+        flex-direction: column;
+        height: auto;
+    }
+    .img-container{
+        width: 70vw;
+        height: 60vh;
+    }
+    
 }
