--- a/frontend/src/components/loader/Loader.css
+++ b/frontend/src/components/loader/Loader.css
@@ -1,7 +1,24 @@
-.loader {
- margin: 0 auto;
-    width: 100%;
-    height: auto;
+.loader-container {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(242 242 242); /* Slight transparency */
+}
 
-  }
-  
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 4px solid #f3f3f39c;
+  border-top: 4px solid #99c8c2;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
