--- a/frontend/src/components/loader/Loader.css
+++ b/frontend/src/components/loader/Loader.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background-color: rgb(242 242 242); /* Slight transparency */
+  background-color: white; /* Slight transparency */
 }
 
 .loader {
@@ -15,7 +15,7 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  animation: spin 1s linear infinite;
+  animation: spin 0.5s linear infinite;
 }
 
 @keyframes spin {
