--- a/frontend/src/pages/product/Product.css
+++ b/frontend/src/pages/product/Product.css
@@ -3,7 +3,6 @@
  display: flex;
  justify-content: center;
  align-items: center;
-/* background-color: #fff; */
 }
 
 .header > h1 {
@@ -18,7 +17,6 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    /* background-color: #93ff60; */
 }
 
 .img-container{
@@ -26,9 +24,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width:49vw;
+    min-width: 50vw;
     height: 100%;
-    /* background-color: #eb5d5d; */
 }
 
 .icon{
@@ -59,7 +56,6 @@ transition: transform 0.3s ease;
     width:49vw;
     height: 100%;
     font-weight: bold;
-    /* background-color: #67d3fd; */
 }
 
 .priceDiscount-container{
@@ -106,7 +102,6 @@ transition: transform 0.3s ease;
     align-items: flex-start;
     padding: 20px;
     gap: 20px;
-    /* background-color: rgba(203, 252, 253, 0.815); */
 }
 
 @media screen and (max-width:800px) {
