--- a/frontend/src/pages/product/Product.css
+++ b/frontend/src/pages/product/Product.css
@@ -1,4 +1,14 @@
 
+.productWrapper{
+width: 100%;
+max-width: 2000px;
+margin: 0 auto;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+}
+
 .header{
  display: flex;
  justify-content: center;
@@ -13,10 +23,12 @@
 
 .first-wrapper{
     width: 98vw;
+    max-width: 2000px;
     height: 50vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin: 0 auto;
 }
 
 .img-container{
@@ -24,8 +36,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 50vw;
-    height: 100%;
+    width: 50vw;
+    height: 50vh;
 }
 
 .icon{
@@ -43,8 +55,8 @@ transition: transform 0.3s ease;
 }
 
 .img{
-    width: 95%;
-    height: 95%;
+    width: 50%;
+    height: 50%;
     border-radius: 15px;
 }
 
@@ -102,6 +114,8 @@ transition: transform 0.3s ease;
     align-items: flex-start;
     padding: 20px;
     gap: 20px;
+    max-width: 2000px;
+margin: 0 auto;
 }
 
 @media screen and (max-width:800px) {
