--- a/frontend/src/components/slider/Slider.css
+++ b/frontend/src/components/slider/Slider.css
@@ -1,5 +1,5 @@
 .container {
-    width: 97vw;
+    width: 100%;
     margin: 0 auto;
     max-width: 2000px;
     margin-top: 71px;
@@ -9,9 +9,11 @@
 }
 
 .wrapBtns {
-    width: 90vw;
-    position: absolute;
+    width: 100%;
     margin: 0 auto;
+    max-width: 2000px;
+    padding: 0 25px;
+    position: absolute;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -53,8 +55,3 @@
     transform: rotate(180deg);
 }
 
-@media screen and(max-width:2000px) {
-    .container{
-        width: 100%;
-    }
-}
