--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -4,10 +4,13 @@
     padding:  0;
     margin: 0;
     box-sizing: border-box;  
-    font-family: "Fraunces", serif;
+    font-family: "Fraunces", serif;/* check */
     user-select: none; 
 }
 
+/* body{
+    
+} */
 .main-title,
 .sec-title{
     text-align: center;
