--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -9,17 +9,18 @@
     padding: 15px;
     position: relative;
     bottom: 0;
-    margin-top: 100px;
-  }
+    /* margin-top: 2px; */
+  } 
   
   .footerTop {
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     gap: 5px;
     padding: 5px;
     font-weight: bold;
+    /* color: #474c4bed; */
   }
   
   .footerBottom {
@@ -67,9 +68,17 @@ cursor: pointer;
 cursor: pointer;
 }
 
-@media screen and (max-width:750px){
+@media screen and (max-width:900px){
+    .footerTop{
+      width: 85%;
+      justify-content: space-evenly;
+      gap:8px;
+    }
+}
+@media screen and (max-width:800px){
     .footerTop{
         flex-direction: column;
         gap: 35px;
+        margin-top: 0px;
     }
 }
