--- a/frontend/src/pages/favorites/FavProduct.css
+++ b/frontend/src/pages/favorites/FavProduct.css
@@ -9,9 +9,15 @@
     right: 0;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1850px) {
     .cartWrapper {
-        bottom: 40px;
-        left: 8px;
+        display: flex;
+        position: fixed;
+        z-index: 999;
+        width: 85px;
+        max-width: 2000px;
+        bottom: 10px;
+        left: 10px;
+        right: 0;
     }
 }
