--- a/frontend/src/components/popUpLogin/PopUpLogin.css
+++ b/frontend/src/components/popUpLogin/PopUpLogin.css
@@ -1,14 +1,90 @@
+.popUpContainer{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    z-index: 99;
+    max-width: 2000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(128, 128, 128, 0.49);   
+}
 
-.popUpLoginBtn{
-    padding: 5px;
+.popUpWrapper{
+    position: absolute;
+    top: 170px;
+    width: 50vw;
+    padding: 35px;
+    background-color:#99c8c2 ;
+    text-align: center;
+    border-radius: 15px;
+    max-width: 750px;
+    min-width: 340px;
+}
+
+.popUpText{
+    font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.popUpBtnWrapper{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.popUpBtn{
+    padding: 10px;
     border-radius: 7px;
     border:none;
-    font-size: 0.9rem;
+    font-size: 1rem;
+    font-weight: bold;
     background-color: #e6f2f1;
     transition: all 0.2s ease-in-out;
 }
 
-.popUpLoginBtn:hover{
+.popUpBtn:hover{
     cursor: pointer;
-    background-color: #e0dfdf;
+    background-color: #c7d6c7;
 }
+
+
+@media screen and (max-width:1000px){
+.popUpBtn{
+    font-size: 0.9rem;
+    padding: 7px;
+}
+}
+
+@media screen and (max-width:1000px){
+.popUpBtn{
+    font-size: 0.8rem;
+    padding: 6px;
+}
+}
+
+@media screen and (max-width:400px){
+.popUpWrapper{
+    top:170px;
+    padding: 25px;
+    min-width: 286px;
+}
+.popUpText{
+    font-size: 1rem;
+}
+.popUpBtnWrapper{
+    margin-top: 22px;
+    justify-content: space-between;
+}
+.popUpBtn{
+    font-size: 0.8rem;
+    font-weight: bold;
+    padding: 4px;
+}
+}
+
+
