--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -1,5 +1,3 @@
-
-
 *{
     padding:  0;
     margin: 0;
@@ -8,30 +6,32 @@
 }
 
 .main-title,
-.sec-title{
+.homePage-title,
+.form-title
+{
     text-align: center;
-
+    color: #282d2c; 
+    font-size: 2.7rem;
 }
 
 .main-title{
-    color: #3f2f06; 
-    font-size: 3rem;
     padding: 40px 0px 7px 0px;
     margin-top: 70px;
 }
 
 .homePage-title{
-    color: #3f2f06;
-    font-size: 3rem;
     padding: 40px 0px 7px 0px;
 }
 
+.form-title{
+padding: 0;
+}
+
 .sec-title{
-    color: #b38a22;
+    color: #3c4240; 
     font-size: 1.6rem;
     padding: 20px 0px;
 }
-
 
 .Loader {
     display: flex;
@@ -53,33 +53,42 @@
     border: 4px double #00000094;
 }
 
-
-
 @media screen and (max-width:1000px) {
-    .main-title{
-        font-size: 2.5rem ;
+    .main-title,
+    .homePage-title{
+        font-size: 2.5rem ; 
         padding: 30px 0px 5px 0px;
     }
     .sec-title{
         font-size: 1.3rem ;
         padding: 20px 10px;
     }
+    .form-title{
+        font-size: 2.2rem ; 
+    }
 }
 
 @media screen and (max-width:600px) {
-    .main-title{
+    .main-title,
+    .homePage-title{
         font-size: 2.2rem ;
         padding: 30px 10px 5px 10px;
     }
+
     .sec-title{
         font-size: 1.2rem ;
         padding: 14px 30px;
     }  
+    .form-title{
+        font-size: 1.9rem ; 
+    }
 }
 
 @media screen and (max-width:500px) {
-    .main-title{
-        font-size: 2rem ;
+
+    .main-title,
+    .homePage-title{
+        font-size: 2rem;
         padding: 30px 10px 5px 10px;
     }
     .sec-title{
