--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -41,7 +41,12 @@
     gap: 15px;
   }
   
-  .footer-icons > * {
+  .footer-icons > a  {
+    text-decoration: none;
+    color: inherit;
+  }
+  
+  .footer-icons > a > * {
     width: 30px;
     height: 30px;
   }
