--- a/frontend/src/pages/about/About.css
+++ b/frontend/src/pages/about/About.css
@@ -1,3 +1,9 @@
+.about-wrapper{
+    background: rgb(255,255,255);
+    background: linear-gradient(153deg, rgba(255,255,255,1) 0%, rgba(167,207,201,0.7175245098039216) 50%, rgba(255,255,255,1) 100%);
+max-width: 2000px;
+}
+
 .container-about{
     width: 100%;
     height: 100%;
@@ -6,15 +12,16 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 5px;
+    padding-top: 50px;
+    padding-bottom: 100px;
     min-height: 70vh;
 }
 
 .about-grid{
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(4,1fr);
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(5,1fr);
     padding: 25px 30px;
     gap: 3vw;
 }
@@ -28,48 +35,57 @@
 
 .div1{
     grid-row:1 ;
-    grid-column:1/2 ;
+    grid-column:2/5 ;
 }
 
 .div2{
     grid-row:2 ;
-    grid-column:2/3 ;
+    grid-column:2/5 ;
 }
 
 .div3{
     grid-row:3 ;
-    grid-column:1/2 ;
+    grid-column:2/5 ;
 }
 
 .div4{
     padding-top: 40px;
     grid-row:4 ;
-    grid-column:2/3 ;
+    grid-column:2/5 ;
 }
 
 .div5{
-    grid-row:1 ;
-    grid-column:2/3 ;
+    padding-top: 40px;
+    grid-row:5 ;
+    grid-column:2/5 ;
 }
 
 .div6{
-    grid-row:2 ;
+    grid-row:1 ;
     grid-column:1/2 ;
 }
 
 .div7{
-    grid-row:3 ;
-    grid-column:2/3 ;
+    grid-row:2 ;
+    grid-column:1/2 ;
 }
 
 .div8{
+    grid-row:3 ;
+    grid-column:1/2 ;
+}
+
+.div9{
     grid-row:4 ;
     grid-column:1/2 ;
 }
 
+.div10{
+    grid-row:5 ;
+    grid-column:1/2 ;
+}
+
 .bgc {
-    background: rgb(34 67 237);
-    background: radial-gradient(circle, rgb(255 213 170) 0%, rgb(34 31 255 / 38%) 100%);
     text-align: center;
     border-radius: 73px;
     display: flex;
