--- a/frontend/src/pages/about/AboutMediaQ.css
+++ b/frontend/src/pages/about/AboutMediaQ.css
@@ -12,14 +12,16 @@
     .div1,
     .div2,
     .div3,
-    .div4{
+    .div4,
+    .div5{
         grid-column:1/3 ;
     }
 
-    .div5,
     .div6,
     .div7,
-    .div8{
+    .div8,
+    .div9,
+    .div10{
         grid-column:3/4} 
     } 
 
@@ -49,22 +51,25 @@
     .div1,
     .div2,
     .div3,
-    .div4{
+    .div4,
+    .div5{
         grid-column:1/4 ;
     }
 
-    .div5,
     .div6,
     .div7,
-    .div8{
+    .div8,
+    .div9,
+    .div10{
         grid-column:4/5} 
     }
 
 @media screen and (max-width:500px) {
     .about-grid{
-        grid-template-rows: repeat(5,1fr);
-        padding: 25px 30px;
-        gap: 3vw;
+        grid-template-rows: repeat(16,1fr);
+        grid-template-rows: repeat(1,1fr);
+        padding: 5px 15px;
+        gap: 50px;
     }   
     .txt{
         font-size: 1rem;
@@ -74,24 +79,46 @@
     .div1,
     .div2,
     .div3,
-    .div4{
+    .div4,
+    .div5,
+    .div6,
+    .div7,
+    .div8,
+    .div9,
+    .div10
+    {
         grid-column:1/5 ;
     }
 
+    .div1{
+        grid-row: 1/3;
+    }
+    .div2{
+        grid-row: 4/6;
+    }
+    .div3{
+        grid-row: 7/9;
+    }
+    .div4{
+        grid-row: 10/12;
+    }
     .div5{
-        grid-row:5 ;
-        grid-column:1 ;
+        grid-row: 13/15;
     }
     .div6{
-        grid-row:5 ;
-        grid-column:2 ;
-    } 
+        grid-row: 3/4;
+    }
     .div7{
-        grid-row:5 ;
-        grid-column:3 ;
+        grid-row: 6/7;
     }
     .div8{
-        grid-row:5 ;
-        grid-column:4}
+        grid-row: 9/10;
+    }
+    .div9{
+        grid-row: 12/13;
+    }
+    .div10{
+        grid-row: 15/16;
+    }
    }
     
