--- a/frontend/src/pages/customer management (CRM)/CustomerMenagment.css
+++ b/frontend/src/pages/customer management (CRM)/CustomerMenagment.css
@@ -1,63 +1,11 @@
 
-.pop-up-wrapper{
+.tableContainer{
+    height: auto;
+    width: 90vw;
+    padding: 25px 15px 170px;
+    margin: 0 auto;
     display: flex;
-    position: absolute;
-    width:100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    color: black;
-    background-color: rgb(255 239 221 / 37%);
-    z-index: 99;
-}
-
-.pop-up{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    height: 50%;
-    justify-content: space-evenly;
-    align-items: center;
-    top: 20%;
-    z-index: 999;
-    color: wheat;
-    background-color: rgb(0 0 0 / 84%);
-    border-radius: 15px;
-    padding: 0 20px;
-}
-
-.pop-up-title{
-    font-size: 1.5rem;   
-}
-
-.pop-up-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    font-size: 1rem;
-    font-weight: bold;
-    padding: 0 20px;
-  }
-
-.green,
-.red{
-    border-radius: 15px;
-    padding: 3px 7px;
-    font-weight: bold;
-}
-
-.green{
-    background-color: rgba(184, 247, 184, 0.733);
-}
-
-.red{
-    background-color: rgba(250, 139, 139, 0.829);
+    min-height: 70vh;
 }
