--- a/frontend/src/pages/favorites/FavProduct.css
+++ b/frontend/src/pages/favorites/FavProduct.css
@@ -1,3 +1,10 @@
+.favContainer{
+    min-height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .cartWrapper {
     display: flex;
     position: fixed;
