--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -5,6 +5,13 @@
     min-height: 70vh;
 }
 
+.homeHeader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .homeBtnWrapper{
     width: 100%;
     display: flex;
@@ -14,11 +21,6 @@
     margin: 0 auto;
     gap: 11vw;
 }
-
-/* .homeSpan{
-font-weight: bold;
-font-size: 1.3rem;
-} */
 
 .homeBtn{
     width: 140px;
@@ -66,6 +68,7 @@ border: 2px solid black;
     .homeBtnWrapper {
         flex-direction: column;
         padding: 30px 0 45px 0;
+        gap: 15px;
     }
     .homeBtn{
         width: 260px;
