--- a/frontend/src/pages/product/Product.css
+++ b/frontend/src/pages/product/Product.css
@@ -48,7 +48,7 @@ transition: transform 0.3s ease;
     max-width: 500px;
     max-height: 500px;
     min-width: 500px;
-    min-height: 500px;
+    min-height: 435px;
     border-radius: 15%;
 }
 
@@ -58,7 +58,7 @@ transition: transform 0.3s ease;
     justify-content: space-evenly;
     align-items: center;
     width:49vw;
-    height: 100%;
+    height: 50vh;
     font-weight: bold;
 }
 
